# yadro_test

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Club.cpp  Runner.cpp
src/headers/: Club.h  Person.h  Runner.h  Table.h
test/: CMakeLists.txt  tests.cpp
